--- a/styles/architect.css
+++ b/styles/architect.css
@@ -1,6 +1,106 @@
 /* google fonts */
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Work+Sans:wght@300;400;600;700;800&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
+
+/* shared style */
 body {
+    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
+    
+}
+
+.btn-primary {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    font-size: 1.25rem;
+    font-weight: 600;
+    padding: 20px 25px;
+    border: 0;
+    cursor: pointer;
+}
+
+/* header styles */
+header {
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-title {
+    color: #131313;
+    font-weight: 700;
+    font-size: 2.8rem;
+}
+
+
+nav>ul {
+    display: flex;
+}
+
+nav li {
+    list-style: none;
+    margin-right: 30px;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+li a {
+    text-decoration: none;
+    color: #424242;
+
+}
+
+/* Banner section style  */
+.banner-content{
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.banner-title {
+    color: #131313;
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.banner-description {
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
+}
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+    
+}
+
+
+
+/* media query */
+/* mobile media query */
+@media screen and (max-width: 576px) {
+   
+    header{
+        padding: 20px;
+    }
+   
+    
+     nav{
+        flex-direction: column;
+     }
+     
+     
+    
 }
