--- a/styles/architect.css
+++ b/styles/architect.css
@@ -141,10 +141,13 @@ main {
     display: flex;
     gap: 100px;
 }
-.feature-content h3{
-    border-left: 5px solid #FF900E;;
+
+.feature-content h3 {
+    border-left: 5px solid #FF900E;
+    ;
 }
-.card {
+
+.feature-content .card {
     border-radius: 8px;
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
@@ -152,7 +155,7 @@ main {
     padding: 30px;
 }
 
-.card h4 {
+.feature-content .card h4 {
     color: #131313;
     font-size: 1.2rem;
     font-weight: 600;
@@ -171,23 +174,48 @@ main {
     bottom: 100px;
 }
 
-.ten-years h2{
+.ten-years h2 {
     font-size: 4rem;
     font-weight: 700;
     margin: 0;
 }
 
-.ten-years p{
+.ten-years p {
     font-size: 1.25rem;
     font-weight: 500;
 }
 
-.feature-image img{
+.feature-image img {
     height: 90%;
     margin-left: 100px;
-    
+
 }
 
+/* facts section start */
+
+.fact-card-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.fact-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    padding: 40px 30px;
+    text-align: center;
+}
+
+.fact-card-container h2 {
+    color: #424242;
+    font-size: 2.8rem;
+    font-weight: 600;
+}
+
+.fact-card-container p {
+    color: #727272;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
 
 
 
@@ -202,8 +230,9 @@ main {
 
     nav,
     .team-img-container,
-    .feature-container
-     {
+    .feature-container, 
+    .fact-card-container
+    {
         flex-direction: column;
         gap: 10px;
     }
@@ -211,20 +240,28 @@ main {
     .team-image {
         grid-template-columns: 1fr;
     }
-    .feature-content{
+
+    .feature-content {
         padding: 10px;
     }
-    .feature-image img{
+
+    .feature-image img {
         width: 90%;
-        margin-left: 30px;
+        margin: 0;
     }
-    .ten-years{
+
+    .ten-years {
         position: relative;
         bottom: 50px;
-        max-width:max-content;
+        max-width: max-content;
         margin: 0 auto;
     }
+
+    .fact-card-container .card{
+        padding: 10px;
+    }
 }
+
 
 /* medium device media query */
 @media screen and (min-width: 576px) and (max-width: 992px) {
@@ -233,9 +270,27 @@ main {
     }
 
     nav,
-    .team-img-container {
+    .team-img-container,
+    .feature-container {
         flex-direction: column;
         gap: 10px;
+    }
+
+    .feature-content {
+        padding: 10px;
+    }
+
+
+    .feature-image img {
+        width: 90%;
+        margin: 0 60px;
+    }
+
+    .ten-years {
+        position: relative;
+        bottom: 50px;
+        max-width: max-content;
+        margin: 0 auto;
     }
 
 
