--- a/styles/architect.css
+++ b/styles/architect.css
@@ -217,6 +217,22 @@ main {
     font-weight: 600;
 }
 
+/* sponsor style */
+.sponsor-container{
+    margin-top: 120px;
+    text-align: center;
+}
+.sponsor-list-image{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 40px;
+}
+
+.sponsor-list-image img{
+    width: 166px;
+}
+
 
 
 
@@ -231,7 +247,8 @@ main {
     nav,
     .team-img-container,
     .feature-container, 
-    .fact-card-container
+    .fact-card-container,
+    .sponsor-list-image
     {
         flex-direction: column;
         gap: 10px;
@@ -247,7 +264,7 @@ main {
 
     .feature-image img {
         width: 90%;
-        margin: 0;
+        /* margin-right: 20px; */
     }
 
     .ten-years {
@@ -260,26 +277,35 @@ main {
     .fact-card-container .card{
         padding: 10px;
     }
+    .sponsor-list-image{
+        gap: 40px;
+    }
+    
 }
 
 
 /* medium device media query */
-@media screen and (min-width: 576px) and (max-width: 992px) {
+/* @media screen and (min-width: 576px) and (max-width: 992px) {
     header {
         padding: 50px;
     }
 
     nav,
     .team-img-container,
-    .feature-container {
+    .feature-container,
+    .sponsor-list-image {
         flex-direction: column;
         gap: 10px;
     }
 
-    .feature-content {
+    .feature-content,
+     {
         padding: 10px;
     }
-
+    .sponsor-list-image{
+        width: 90%;
+        padding: 30px;
+    }
 
     .feature-image img {
         width: 90%;
@@ -294,4 +320,4 @@ main {
     }
 
 
-}
+} */
