--- a/styles/architect.css
+++ b/styles/architect.css
@@ -218,21 +218,34 @@ main {
 }
 
 /* sponsor style */
-.sponsor-container{
+.sponsor-container {
     margin-top: 120px;
     text-align: center;
 }
-.sponsor-list-image{
+
+.sponsor-list-image {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     gap: 40px;
 }
 
-.sponsor-list-image img{
+.sponsor-list-image img {
     width: 166px;
 }
 
+/* Footer style */
+footer {
+    max-width: 100%;
+    margin: 130px auto;
+    /* padding: 40px; */
+    border-radius: 8px;
+    background: #FFF4E7;
+    color: #424242;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
 
 
 
@@ -246,10 +259,9 @@ main {
 
     nav,
     .team-img-container,
-    .feature-container, 
+    .feature-container,
     .fact-card-container,
-    .sponsor-list-image
-    {
+    .sponsor-list-image {
         flex-direction: column;
         gap: 10px;
     }
@@ -264,28 +276,35 @@ main {
 
     .feature-image img {
         width: 90%;
-        /* margin-right: 20px; */
+        margin-left: 20px; 
     }
 
-    .ten-years {
-        position: relative;
-        bottom: 50px;
-        max-width: max-content;
-        margin: 0 auto;
+    .ten-years{
+        position: static;
+        margin-left: 20px;
     }
 
-    .fact-card-container .card{
+    
+
+    .fact-card-container .card {
         padding: 10px;
     }
-    .sponsor-list-image{
+    .sponsor-container{
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .sponsor-list-image {
         gap: 40px;
     }
-    
+
 }
 
 
-/* medium device media query */
-/* @media screen and (min-width: 576px) and (max-width: 992px) {
+
+
+
+/* medium device media query
+@media screen and (min-width: 576px) and (max-width: 992px) {
     header {
         padding: 50px;
     }
@@ -320,4 +339,4 @@ main {
     }
 
 
-} */
+}  */
