--- a/styles/architect.css
+++ b/styles/architect.css
@@ -303,7 +303,7 @@ footer {
 
 
 
-/* medium device media query
+/* medium device media query */
 @media screen and (min-width: 576px) and (max-width: 992px) {
     header {
         padding: 50px;
@@ -312,12 +312,13 @@ footer {
     nav,
     .team-img-container,
     .feature-container,
+    .fact-card-container,
     .sponsor-list-image {
         flex-direction: column;
         gap: 10px;
     }
 
-    .feature-content,
+    .feature-content
      {
         padding: 10px;
     }
@@ -326,10 +327,7 @@ footer {
         padding: 30px;
     }
 
-    .feature-image img {
-        width: 90%;
-        margin: 0 60px;
-    }
+
 
     .ten-years {
         position: relative;
@@ -339,4 +337,4 @@ footer {
     }
 
 
-}  */
+} 
